--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+Hey aaron
+
+
+
+
+
+
+
+
 </html>
 
-<div>hi</div>
-because i dont want to
