--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <div>Hello World</div>
 <!-- hey reza -->
 
+<div class="row"></div>
 
-<div class="btn-default"></div>
+<div class="large-6 columns">
+a
+</div>
+
+
+<div class="large-6 columns">
+b
+</div>
