--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="row">
       <div class="large-12 columns">
-        <h1>HEY JEFF</h1>
+        <h1>HEY KEEGAN</h1>
       </div>
     </div>
 
